external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/basic_invalid_environment/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 8, column 11
  |
8 | mainnet = 9123
  |           ^^^^
invalid type: integer `9123`, expected a string
